# rpsd

./: LICENSE  Makefile  README.md  app.py  pyproject.toml  teste.py
filesystem/backup_replicator_1/: file_test_2.txt
filesystem/backup_replicator_2/: file_test.txt
filesystem/backup_replicator_manager/: file_test.txt  file_test_1.txt
src/: client.py  replicator.py  replicator_manager.py  server.py  server2.py
src/server/: application.py  client.py  replicator.py  replicator_manager.py  test.py
